tests/ui/attr-in-sync-method.stderr
error: #[async_trait] is not allowed in sync methods
 --> tests/ui/attr-in-sync-method.rs:5:5
  |
5 |     #[async_trait(?Send)]
  |     ^^^^^^^^^^^^^^^^^^^^^
